App 1.0v. Student_question page.

--- a/pages/professors/question_page.html
+++ b/pages/professors/question_page.html
@@ -80,7 +80,7 @@
         <table bgcolor="#f0f8ff" hidden id="answersTable" style="text-align:center; margin-bottom: 15px">
             <thead>
             <tr>
-                <th>Ответ</th>
+                <th>Варианты ответа</th>
             </tr>
             </thead>
             <tbody id="answersLines">
